Fix service buttons' heights and wrap h1

--- a/resources/assets/sass/partials/mobile.scss
+++ b/resources/assets/sass/partials/mobile.scss
@@ -22,7 +22,17 @@
 
 @media only screen and (max-width: 992px) {
     a.services {
-        height: 70px;
+        height: 90px;
+    }
+}
+
+@media only screen and (max-width: 500px) {
+    a.services {
+        height: auto;
+    }
+
+    h1 {
+        word-wrap: break-word;
     }
 }
 
